cap-orders-service/k8s/app-router.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: orders-srv-cap-approuter
spec:
  host: orders-srv-cap-approuter
  trafficPolicy:
    loadBalancer:
      consistentHash:
        httpCookie:
          name: JSESSIONID
          path: /
          ttl: 0s
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: orders-srv-cap-approuter
  name: orders-srv-cap-approuter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders-srv-cap-approuter
  strategy: {}
  template:
    metadata:
      labels:
        app: orders-srv-cap-approuter
    spec:
      volumes:
      - name: xs-app
        configMap:
          name: orders-srv-cap-xs-app
      - name: orders-srv-auth
        secret:
          secretName: orders-srv-auth
      - name: orders-srv-destination
        secret:
          secretName: orders-srv-destination
      - name: html5-apps-repo-approuter
        secret:
          secretName: html5-apps-repo-approuter
      containers:
      - image: sapse/approuter:12.0.3
        name: orders-srv-cap-approuter
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
        resources: {}
        volumeMounts:
        - name: xs-app
          mountPath: /app/xs-app.json
          subPath: xs-app.json
          readOnly: true
        - name: orders-srv-auth
          mountPath: /etc/secrets/sapcp/xsuaa/orders-srv-auth
          readOnly: true
        - name: orders-srv-destination
          mountPath: /etc/secrets/sapcp/destination/orders-srv-destination
          readOnly: true
        - name: html5-apps-repo-approuter
          mountPath: /etc/secrets/sapcp/html5-apps-repo/html5-apps-repo-approuter
          readOnly: true
status: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: orders-srv-cap-approuter
  name: orders-srv-cap-approuter
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: orders-srv-cap-approuter
